# p1204_3_extensions

./: README.md
bitstream_mode0/: .gitignore  LICENSE.md  README.md  pyproject.toml
bitstream_mode0/bitstream_mode0/: __init__.py  features.py  generic.py  model.py  modelutils.py
bitstream_mode0/bitstream_mode0/models/bitstream_mode0/: config.json  mode0baseline_mobile_final_coeff.json  mode0baseline_pc_final_coeff.json
bitstream_mode0/tests/: test_bitstream_mode0.py
bitstream_mode1/: .gitignore  README.md  pyproject.toml
bitstream_mode1/bitstream_mode1/: __init__.py  cmd_utils.py  extract_video_frame_info.py  features.py  model.py  modelutils.py
bitstream_mode1/bitstream_mode1/models/bitstream_mode1/: config.json  mode1baseline_mobile_final_coeff.json  mode1baseline_pc_final_coeff.json
bitstream_mode1/tests/: test_bitstream_mode1.py
hybrid_mode0/: .gitignore  README.md  pyproject.toml
hybrid_mode0/hybrid_mode0/: __init__.py  file_utils.py  hybrid.py
hybrid_mode0/tests/: test_p1204_3_hybrid.py
