[tool.poetry]
name = "bitstream_mode0"
version = "0.1.0"
description = "bitstream mode 0 model"
authors = ["Ramachandra Rao Rakesh Rao <rakesh-rao.ramachandra-rao@tu-ilmenau.de>", "Steve Göring <steve.goering@tu-ilmenau.de>"]
license = "LICENCE.md"

[tool.poetry.dependencies]
python = "^3.8,<3.12"
pandas = "^1.3.5"
numpy = "^1.22.1"
scikit-learn = "^1.0.2"
scipy = "^1.7.3"
sklearn-json = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bitstream_mode0 = "bitstream_mode0:main"
