[tool.poetry]
name = "bitstream_mode1"
version = "0.1.0"
description = ""
authors = ["rakeshraor <rakesh-rao.ramachandra-rao@tu-ilmenau.de>"]

[tool.poetry.dependencies]
python = "^3.8,<3.10"
numpy = "^1.20.2"
pandas = "^1.2.3"
scikit-learn = "^0.24.1"
scipy = "^1.6.2"
sklearn-json = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bitstream_mode1 = "bitstream_mode1:main"