[tool.poetry]
name = "hybrid_mode0"
version = "0.1.0"
description = "hybrid mode 0 model"
authors = ["Ramachandra Rao Rakesh Rao <rakesh-rao.ramachandra-rao@tu-ilmenau.de>", "Steve Göring <steve.goering@tu-ilmenau.de>"]
license = "LICENCE.md"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dependencies.p1204-3]
git = "https://github.com/Telecommunication-Telemedia-Assessment/bitstream_mode3_p1204_3.git"
branch = "master"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hybrid_mode0 = "hybrid_mode0.hybrid:main"